adapted about bkg img to change on large screen to avoid blurring

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -31,10 +31,13 @@
   }
 }
 .banner {
-  margin: 1rem;
-  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
   @media screen and (min-width: 1058px) {
-    margin: 0 15rem;
+    justify-content: center;
+    flex-flow: row wrap;
   }
 
   .location {
@@ -45,6 +48,16 @@
     flex-flow: column;
     background-color: whitesmoke;
     margin: 1rem 0;
+    @media screen and (min-width: 1058px) {
+      width: 40rem;
+      margin: 1rem;
+    }
+    h1 {
+      padding: 0 1rem;
+    }
+    h4 {
+      padding: 0 1rem;
+    }
   }
   .inspection {
     height: 45vh;
@@ -54,6 +67,16 @@
     flex-flow: column;
     background-color: whitesmoke;
     margin: 1rem 0;
+    @media screen and (min-width: 1058px) {
+      width: 40rem;
+      margin: 1rem;
+    }
+    h1 {
+      padding: 0 1rem;
+    }
+    h4 {
+      padding: 0 1rem;
+    }
   }
 }
 .about {
@@ -64,7 +87,7 @@
   padding: 1rem;
   height: 100vh;
   color: whitesmoke;
-  background-image: url('../images/roofing-main-small.webp');
+  background-image: url('../images/roofing-full-size.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -72,8 +95,17 @@
     margin: 5rem;
   }
   @media screen and (min-width: 1058px) {
-    background-image: url('../images/roofing-full-size.jpg');
-    margin: 0 30rem;
+    background-image: url('../images/full2.jpg');
+  }
+  h4 {
+    @media screen and (min-width: 1058px) {
+      padding: 0 20rem;
+    }
+  }
+  p {
+    @media screen and (min-width: 1058px) {
+      padding: 1rem 20rem;
+    }
   }
 }
 .systems {
