--- a/src/styles/team.less
+++ b/src/styles/team.less
@@ -1,6 +1,23 @@
+.banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  h1 {
+  }
+}
+
 .images {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: column;
+  @media screen and (min-width: 1058px) {
+    flex-flow: row wrap;
+  }
+  img {
+    margin: 1rem 0;
+    @media screen and (min-width: 1058px) {
+      margin: 1rem;
+    }
+  }
 }
